--- a/htdocs/bimpsupport/extends/entities/bimp/objects/BS_SAV.yml
+++ b/htdocs/bimpsupport/extends/entities/bimp/objects/BS_SAV.yml
@@ -42,4 +42,16 @@ forms:
                         method: getIRISSymtoms
                         params:
                             - callback: getEcologicProductId
+            - custom: 1
+              label: RepairCodes
+              input_name: RepairCodes
+              show: 
+                   callback: asProdEcologic
+              input: 
+                  type: select
+                  options: 
+                      callback: 
+                        method: getRepairCodes
+                        params:
+                            - callback: getEcologicProductId
             
