--- a/htdocs/bimpsupport/extends/entities/bimp/objects/BS_SAV.yml
+++ b/htdocs/bimpsupport/extends/entities/bimp/objects/BS_SAV.yml
@@ -30,28 +30,30 @@ fields_tables:
 forms:              
     resolution: 
         rows: 
-            - custom: 1
-              label: IRISSymtoms
-              input_name: IRISSymtoms
-              show: 
-                   callback: asProdEcologic
-              input: 
-                  type: select
-                  options: 
-                      callback: 
-                        method: getIRISSymtoms
-                        params:
-                            - callback: getEcologicProductId
-            - custom: 1
-              label: RepairCodes
-              input_name: RepairCodes
-              show: 
-                   callback: asProdEcologic
-              input: 
-                  type: select
-                  options: 
-                      callback: 
-                        method: getRepairCodes
-                        params:
-                            - callback: getEcologicProductId
+            IRISSymtoms:
+                custom: 1
+                label: IRISSymtoms
+                input_name: IRISSymtoms
+                show: 
+                    callback: asProdEcologic
+                input: 
+                   type: select
+                   options: 
+                       callback: 
+                         method: getIRISSymtoms
+                         params:
+                             - callback: getEcologicProductId
+            RepairCodes:
+                custom: 1
+                label: RepairCodes
+                input_name: RepairCodes
+                show: 
+                     callback: asProdEcologic
+                input: 
+                    type: select
+                    options: 
+                        callback: 
+                          method: getRepairCodes
+                          params:
+                              - callback: getEcologicProductId
             
