--- a/htdocs/bimpcore/extends/entities/actimac/objects/Bimp_Client.yml
+++ b/htdocs/bimpcore/extends/entities/actimac/objects/Bimp_Client.yml
@@ -8,4 +8,10 @@ fields_tables:
     infos_comm: 
         rows:
             kmTotal:
-                field: kmTotal
+                field: kmTotal            
+forms: 
+    light: 
+        rows:
+            kmTotal:
+                field: kmTotal 
+            
