--- a/htdocs/bimpsupport/objects/BS_SAV.yml
+++ b/htdocs/bimpsupport/objects/BS_SAV.yml
@@ -286,6 +286,10 @@ fields:
                 type: search_societe
                 societe_type: customer    
         create_form: light
+        create_form_values: 
+            fields: 
+                marche: 
+                    - 18
         edit_form: default
     id_contact:
         label: Contact
