BimpCache::cacheServeurFunction('getDefaultTva'); Former-commit-id: ecb21390ac49b11ed8d6782591f83fe22440c5be

--- a/htdocs/bimpcore/objects/Bimp_Product.yml
+++ b/htdocs/bimpcore/objects/Bimp_Product.yml
@@ -225,7 +225,10 @@ fields:
         label: Taux de TVA
         type: percent
         default_value: 
-            callback: getDefaultTva
+            callback: 
+                method: cacheServeurFunction
+                params:
+                    - getDefaultTva
         
     recuperableonly: 
         label: TVA récupérable seulement
