BimpCache::cacheServeurFunction('getDefaultTva'); Former-commit-id: e60ce37b8ee47982831110a263ec28e80dc28558

--- a/htdocs/bimpcore/objects/Bimp_ProductFournisseurPrice.yml
+++ b/htdocs/bimpcore/objects/Bimp_ProductFournisseurPrice.yml
@@ -65,7 +65,10 @@ fields:
         label: Taux de TVA
         type: percent
         default_value: 
-            callback: getDefaultTva
+            callback: 
+                method: cacheServeurFunction
+                params:
+                    - getDefaultTva
         decimals: 4
         min: 0
         max: 100
