--- a/htdocs/bimptask/bimptask.yml
+++ b/htdocs/bimptask/bimptask.yml
@@ -13,3 +13,7 @@ params:
         label: Autoriser la création de tâche pour le signalement des bugs
         type: bool
         def: 0
+    
+    :
+        label: Mail pour les retour
+        def: reponse@bimp-groupe.net
