Maj url espace client
Former-commit-id: 9578cbac086f39e635efc5701eb33233e82ada0e

--- a/htdocs/bimpcore/bimpcore.yml
+++ b/htdocs/bimpcore/bimpcore.yml
@@ -87,7 +87,8 @@ params:
     public_base_url: 
         label: Base URL Publique
         info: Base de l'URL pour l'accès public à certaines pages de l'ERP.
-        warning: Différent de l'URL de l'espace client (cf bimpinterfaceclient)
+        warning: Différent de l'URL de l'espace client (cf bimpinterfaceclient).
+        help: Ne pas oublier le "?" si nécessaire
     date_archive: 
         label: Date archive
         def: ''
