--- a/htdocs/bimpinterfaceclient/bimpinterfaceclient.yml
+++ b/htdocs/bimpinterfaceclient/bimpinterfaceclient.yml
@@ -1,6 +1,7 @@
 params: 
     base_url: 
         label: Base URL de l'espace client
+        help: Ne pas oublier le "?" si nécessaire
         required: 1
         
     default_public_entity: 
