--- a/htdocs/bimpsupport/objects/BS_Pret.yml
+++ b/htdocs/bimpsupport/objects/BS_Pret.yml
@@ -5,6 +5,8 @@ parent_module: bimpcore
 parent_object: Bimp_Client
 parent_id_property: id_client
 
+entity_name: bs_pret
+
 labels: 
     name: prêt de matériel
     name_plur: prêts de matériel
