Filtre duree initiale contrats
Former-commit-id: 36e09eb559d5e1a8c736bc164ebe5a77acf20756

--- a/htdocs/bimpcontract/objects/BContract_contrat.yml
+++ b/htdocs/bimpcontract/objects/BContract_contrat.yml
@@ -231,6 +231,9 @@ fields:
         dol_extra_field: 1
         default_value: 12
         required: 1
+    duree_initiale: 
+        label: Durée initiale en mois
+        type: int        
     periodicity:
         label: Périodicité de facturation
         type: int
@@ -1197,6 +1200,7 @@ fields_tables:
         rows:
             - field: show_fact_line_in_pdf
               edit: 1
+              
     facturation:
         panel: 1
         title: Informations sur la facturation du contrat
@@ -1211,6 +1215,7 @@ fields_tables:
             - label: Date de début de prochaine période de facturation
               value:
                   callback: displayDateNextFacture
+                  
     duration:
         panel: 1
         title: Informations sur la durée de validité du contrat
