--- a/htdocs/bimpcommercial/bimpcommercial.yml
+++ b/htdocs/bimpcommercial/bimpcommercial.yml
@@ -9,6 +9,11 @@ categories:
         label: Envoi rappels
         
 params: 
+    use_lock_num: 
+        label: Utiliser le lock pour les références des pièces commerciales
+        type: bool
+        def: 1
+        
     date_debut_exercice: 
         label: Date début exercice
         def: 2020-04-01
