filtre marge négative
Former-commit-id: f7ba231818a7ed5f59f0a46662a6ff4c072fbd53

--- a/htdocs/bimpcommercial/objects/ObjectLine.yml
+++ b/htdocs/bimpcommercial/objects/ObjectLine.yml
@@ -618,7 +618,13 @@ filters:
         type: check_list
         items: 
             1: OUI
-            0: NON        
+            0: NON  
+            
+    marge_neg:
+        label: Marge négative (av reval)
+        type: check_list
+        items: 
+            1: OUI
             
 filters_panels: 
     default: 
